--- a/css/css-layout/flexbox/flexbox0.html
+++ b/css/css-layout/flexbox/flexbox0.html
@@ -30,7 +30,9 @@
         margin: 10px;
         background: aqua;
       }
-
+section{
+  display:flex;
+gap:10 px;}
       /* Add your flexbox CSS below here */
 
 
